# ChangeLog for media-libs/libbluray
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.74 2015/05/11 06:59:06 aballier Exp $

*libbluray-0.8.0 (11 May 2015)

  11 May 2015; Alexis Ballier <aballier@gentoo.org> +libbluray-0.8.0.ebuild:
  version bump

  19 Apr 2015; Pacho Ramos <pacho@gentoo.org> libbluray-0.6.2.ebuild:
  x86 stable wrt bug #526004

  15 Mar 2015; Ben de Groot <yngwin@gentoo.org> libbluray-0.7.0.ebuild,
  libbluray-9999.ebuild, metadata.xml:
  Add bdplus useflag (as requested in bug #524396). Sync live ebuild with 0.7.0
  changes.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> libbluray-0.6.2.ebuild:
  Stable for ppc, wrt bug #526004

  12 Feb 2015; Pacho Ramos <pacho@gentoo.org> libbluray-0.6.2.ebuild:
  amd64 stable, bug #526004

*libbluray-0.7.0 (29 Jan 2015)

  29 Jan 2015; Tim Harder <radhermit@gentoo.org> +libbluray-0.7.0.ebuild:
  Version bump, add fontconfig use flag.

*libbluray-0.6.2 (22 Sep 2014)

  22 Sep 2014; Tim Harder <radhermit@gentoo.org> +libbluray-0.6.2.ebuild:
  Version bump.

  05 Aug 2014; Lars Wendler <polynomial-c@gentoo.org> libbluray-9999.ebuild:
  Adjusted live ebuild.

*libbluray-0.6.1 (05 Aug 2014)

  05 Aug 2014; Lars Wendler <polynomial-c@gentoo.org> -libbluray-0.2.2.ebuild,
  -libbluray-0.2.3.ebuild, -libbluray-0.3.0-r1.ebuild, -libbluray-0.4.0.ebuild,
  +libbluray-0.6.1.ebuild:
  Version bump. Removed old. Thanks to Uwe L. Korn for providing an ebuild
  patch in bug #516770.

  04 Jul 2014; Agostino Sarubbo <ago@gentoo.org> libbluray-0.5.0.ebuild:
  Stable for sparc, wrt bug #504788

  04 Jul 2014; Agostino Sarubbo <ago@gentoo.org> libbluray-0.5.0.ebuild:
  Stable for ppc64, wrt bug #504788

  04 Jul 2014; Agostino Sarubbo <ago@gentoo.org> libbluray-0.5.0.ebuild:
  Stable for ppc, wrt bug #504788

  19 Jun 2014; Michał Górny <mgorny@gentoo.org> libbluray-0.5.0-r1.ebuild,
  libbluray-9999.ebuild: