@@ -12,14 +12,14 @@ EBUILD libbluray-0.5.0.ebuild 1896 SHA256 54d06cc1f8a4e40308c3fb6b151d1c935f099d
 EBUILD libbluray-0.6.1.ebuild 2219 SHA256 f30167483cc98a4969a0dd5103a635932440722839c4183e70f92be2ed667ef9 SHA512 b5a004bfbc28d0db73d0ec1cd7a32339e0fce10f0666c56518d6f54d1c70e995b88905fe2b0419421d5eadc3dc694eb96e9f9b46a65b6041db510d064d4799d8 WHIRLPOOL 5e9ad571f08bacc514c64c8c48466b0d4e8ae3bdc6a8a3a183598da3f0a28ee01a5902de413731997d0edab0ac50d1306379e895f01969aa9d204577c091783e
 EBUILD libbluray-0.6.2.ebuild 2209 SHA256 0b900871edca422e8668ea795d4a490463a7c09a481d6382f10611a2d7620815 SHA512 4111ea882b662ad161d8ebc7f3eb2011427e9012575eef3de1a182423726505b222523be505624d4786511ef7069ffd6653d1e77226669e2dc95b33c92f937f5 WHIRLPOOL cb4051ab4c9570ade7ade389d5d16856cd4f307920b535dad832c6adce5d7a98a02ea2f4f4b96da83b8f30564999cf3b5589845dbe2b57ebe4900c3532677c3a
 EBUILD libbluray-0.7.0.ebuild 2382 SHA256 85cadc9bbab4d3a394098ef9355fc9d5d3171c2d1ece12d4334684b75f2a7cb0 SHA512 01bd9d9ae32611bfb7719232706feb0bd1afa91af32c9d541cf1db86619bc7dd377a53108525b84120ec052d688b9e0e3cb1091cc8e629db0505cfa901aa310e WHIRLPOOL 8e97f89e138378da6765c095718c050f345714d48c3d9f8f1370669bd48823bf12d5b9f8c412641e09a6b8d22795adab47c9f62e7b725ab02393864855d6b1cb
-EBUILD libbluray-0.8.0.ebuild 2384 SHA256 bb3e5d58ee2ca72a3180e90e4a765e04401287cee7ea8189c5ab4e16b16a9567 SHA512 54f61de98ab63fb0ecff995fb5f482f176315e27c8d35cb470f8dbd954b70f5c9edf3ca4eb237bfc1363e587113a8aa63c2a782b8e8774bac7680532d62a068c WHIRLPOOL 0ff1dac21458cf607470ac0ef8baeb2f8dbb416cfc7e54a80b93877db7a9d3ea775b0458c8104c93d306b47ff787b83b4cbf6e62bf858279a1e887498c70e71f
+EBUILD libbluray-0.8.0.ebuild 2376 SHA256 334765ee70e9e8af4912744ffb957e501c5c5bda9149fd69562f892c4bc4963a SHA512 a6265183b0bbf7db7c6500728f53883b1e0ce4e1d8f7f01181baff0b7de8845f077a7eceabf2692f99c97d9975dc28860314202f5cd54de50ee820edaadfa663 WHIRLPOOL 605cc4fbbf73f8db615d4aa6836e8bc07aaed3ebdbd83218a0ba0d4427949eec5606c1115948ab1cbecfa05283404a3f9ea3d028af4ac44db4ff98ee65725421
 EBUILD libbluray-9999.ebuild 2307 SHA256 9bbccc82a71f4df611e05423ef9297c9ef72f873264e8ba34bf686c8380d1ec1 SHA512 83f33c0ac3ac236f11af7ed9567b57f1faef57842849b355a4c8a9399d5376418f190d30384b2633a8d1e958df89a7b8172e7e9d3d973429bfbbde78796fbd2e WHIRLPOOL 4ab5287b4e2b494a4d295461ff8256c07fa837f087dc0bc20449dd76885fcc6f970f6f569ba6e21385f1e60dd0e55fd49d5fb364890cdd990804ae514e757b97
-MISC ChangeLog 11144 SHA256 812c3af81f16a37a43d7da6988802f62baf899c06e6a0c883758ece0a512ab16 SHA512 b9651d66408329ba8c83cba6483aa3dd0a01476454a26a7649a28ac0d041823d437e113a7566e6ab8864ea7860731d3a74f984971e43b8d3e8518311c59a63e9 WHIRLPOOL 6b513d68135e27556ce18a7fa486f1e770037910213122c74b05dc2ea43e05d5850559d7d4edf1446d12785fd2a11f7ad658aa23f592f8040ade65d29d11de0e
+MISC ChangeLog 11264 SHA256 8553b60e73fb4e3f0b63a054a5da3ee6064dba39b32d99ec6d4bad2409e325ee SHA512 5d6848fbb0b1e6031b15237df4a500b0cad8fefcd6e837369a346eb23157dcb75fd17f5ce0da74580b2ad955f7beff44b9b708f142136a75589fd15130356273 WHIRLPOOL 7ff2359f228f95d7a20fe4bbc03a59448d2c56fe74fa2fd6abfb34f9f5c9276b86551b99d58161603fa89cd4661360350a2f053d98e3182443b8e71631414354
 MISC metadata.xml 451 SHA256 f790c4ed37defc140ef337f82b41237d0dea208df11a94dbd4619d50c1727c1a SHA512 d676b72a765563d6d03da57bdb7781bd815dbe29f36caca00af3d03040f953059079b9b3c0ed924021c1062bf59f268cdadd2e5d91e78ad1db11a9c452d0154f WHIRLPOOL 1808cefbb81b552ebb59cb658fe39719436e55bc59f5dfc1c7fd29c6cb328808baa60a36e9f9fcde2f6f809dbadd4528d1e2262c82770d244e14af8a753681d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVQUzsACgkQvFcC4BYPU0pwgwCgk2BF6cG1PuibcmNn98zmEQHX
-lToAoJfvWCiQGBi+zWdda0ikYVhcTk+Y
-=1ERi
+iEYEAREIAAYFAlVQdL8ACgkQvFcC4BYPU0pCBACfaEaFzL73OSIIBTeYg1oVwIkR
+eloAniNWZTkgqFqdXC274L37RR+611sL
+=rjpV
 -----END PGP SIGNATURE-----
